--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,6 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import re\n",
-    "import nltk\n",
     "from stop_words import get_stop_words\n",
     "from collections import Counter\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +168,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +258,7 @@
        "4  11     NaN      NaN      Typhoon Soudelor kills 28 in China and Taiwan"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -589,30 +588,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BATCH_SIZE = 32\n",
-    "NUM_TRAINING_EXAMPLES = df_train.shape[0]\n",
-    "TRAIN_SPLIT = 0.8\n",
-    "VAL_SPLIT = 0.2\n",
-    "STEPS_PER_EPOCH = int(NUM_TRAINING_EXAMPLES)*TRAIN_SPLIT // BATCH_SIZE\n",
-    "\n",
-    "EPOCHS = 2\n",
-    "AUTO = tf.data.experimental.AUTOTUNE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = df_train[\"text\"]\n",
     "y = df_train[\"target\"]\n",
     "\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=VAL_SPLIT, random_state=42)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=20, random_state=42)\n",
     "\n",
     "X_test = df_test[\"text\"]"
    ]
