--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,22 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rohangupta/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend\n",
       "TensorFlow version: 2.18.0\n",
       "KerasNLP version: 0.19.1\n"
      ]
@@ -41,6 +32,7 @@
     "import keras_nlp\n",
     "from sklearn.metrics import ConfusionMatrixDisplay, confusion_matrix\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.utils.class_weight import compute_class_weight\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import re\n",
@@ -50,6 +42,8 @@
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Embedding, LSTM, Dense, Bidirectional, Dropout\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "\n",
     "\n",
     "\n",
@@ -59,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +171,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +261,7 @@
        "4  11     NaN      NaN      Typhoon Soudelor kills 28 in China and Taiwan"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +395,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class Weights: {0: 0.8766697374481806, 1: 1.1637114032405993}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate class weights for loss function\n",
+    "\n",
+    "class_weights = compute_class_weight(\n",
+    "    class_weight='balanced',\n",
+    "    classes=np.unique(df_train['target']),\n",
+    "    y=df_train['target'].values\n",
+    ")\n",
+    "class_weights = dict(enumerate(class_weights))\n",
+    "print(f\"Class Weights: {class_weights}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +645,7 @@
        "4       1      88  [just, got, sent, photo, ruby, alaska, smoke, ...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -713,12 +732,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tokenization\n",
-    "tokenizer = Tokenizer()\n",
+    "tokenizer = Tokenizer(oov_token=\"<OOV>\")\n",
     "tokenizer.fit_on_texts(df_train['cleaned_text'])\n",
     "X_train_seq = tokenizer.texts_to_sequences(df_train['cleaned_text'])\n",
     "X_test_seq = tokenizer.texts_to_sequences(df_test['cleaned_text'])\n",
@@ -731,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,56 +764,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rohangupta/Library/Python/3.9/lib/python/site-packages/keras/src/layers/core/embedding.py:90: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model architecture\n",
     "vocab_size = len(tokenizer.word_index) + 1\n",
     "embedding_dim = 128\n",
     "\n",
     "model = Sequential([\n",
-    "    Embedding(vocab_size, embedding_dim, input_length=max_length),\n",
-    "    Bidirectional(LSTM(128, return_sequences=True)),\n",
-    "    Dropout(0.2),\n",
-    "    Bidirectional(LSTM(64)),\n",
-    "    Dropout(0.2),\n",
-    "    Dense(64, activation='relu'),\n",
-    "    Dropout(0.2),\n",
+    "    Embedding(vocab_size, 100),  # Reduced embedding dimension\n",
+    "    Bidirectional(LSTM(64, dropout=0.3, recurrent_dropout=0.3)),  # Added recurrent dropout\n",
+    "    Dropout(0.5),  # Increased dropout\n",
+    "    Dense(64, activation='relu', kernel_regularizer='l2'),  # Added L2 regularization\n",
+    "    Dropout(0.3),\n",
     "    Dense(1, activation='sigmoid')\n",
     "])\n",
     "\n",
     "# Compile the model\n",
-    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])"
+    "model.compile(\n",
+    "    optimizer=Adam(learning_rate=0.0001),  # Lower learning rate\n",
+    "    loss='binary_crossentropy',\n",
+    "    metrics=['accuracy']\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "early_stop = EarlyStopping(\n",
+    "    monitor='val_loss',\n",
+    "    patience=3,\n",
+    "    restore_best_weights=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n"
+      "Epoch 1/50\n"
      ]
     }
    ],
    "source": [
     "# Train the model\n",
-    "epochs = 10\n",
-    "batch_size = 32\n",
-    "model.fit(X_train, y_train, epochs=epochs, batch_size=batch_size, validation_data=(X_val, y_val))"
+    "history = model.fit(\n",
+    "    X_train, y_train,\n",
+    "    validation_data=(X_val, y_val),\n",
+    "    epochs=50,  # Let early stopping handle termination\n",
+    "    batch_size=64,  # Try smaller batches\n",
+    "    callbacks=[early_stop],\n",
+    "    class_weight=class_weights,\n",
+    "    verbose=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract history data\n",
+    "history_dict = history.history\n",
+    "loss_values = history_dict['loss']\n",
+    "val_loss_values = history_dict['val_loss']\n",
+    "accuracy = history_dict['accuracy']\n",
+    "val_accuracy = history_dict['val_accuracy']\n",
+    "epochs = range(1, len(loss_values) + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot loss\n",
+    "plt.figure(figsize=(12, 5))\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(epochs, loss_values, 'bo', label='Training loss')\n",
+    "plt.plot(epochs, val_loss_values, 'b', label='Validation loss')\n",
+    "plt.title('Training and validation loss')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot accuracy\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(epochs, accuracy, 'bo', label='Training accuracy')\n",
+    "plt.plot(epochs, val_accuracy, 'b', label='Validation accuracy')\n",
+    "plt.title('Training and validation accuracy')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
