--- a/main.ipynb
+++ b/main.ipynb
@@ -976,33 +976,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create subplots\n",
+    "plt.figure(figsize=(14, 6))\n",
+    "\n",
     "# Plot loss\n",
-    "plt.figure(figsize=(12, 5))\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.plot(epochs, loss_values, 'bo', label='Training loss')\n",
-    "plt.plot(epochs, val_loss_values, 'b', label='Validation loss')\n",
-    "plt.title('Training and validation loss')\n",
+    "plt.plot(epochs, loss_values, 'bo-', label='Training loss')  # Blue circles with line\n",
+    "plt.plot(epochs, val_loss_values, 'r^-', label='Validation loss')  # Red triangles with line\n",
+    "plt.title('Training vs Validation Loss')\n",
     "plt.xlabel('Epochs')\n",
     "plt.ylabel('Loss')\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot accuracy\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.plot(epochs, accuracy, 'bo', label='Training accuracy')\n",
-    "plt.plot(epochs, val_accuracy, 'b', label='Validation accuracy')\n",
-    "plt.title('Training and validation accuracy')\n",
-    "plt.xlabel('Epochs')\n",
-    "plt.ylabel('Accuracy')\n",
+    "plt.grid(True, alpha=0.3)\n",
     "plt.legend()\n",
     "\n",
+    "# Plot accuracy\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(epochs, accuracy, 'bo-', label='Training accuracy')\n",
+    "plt.plot(epochs, val_accuracy, 'r^-', label='Validation accuracy')\n",
+    "plt.title('Training vs Validation Accuracy')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.legend()\n",
+    "\n",
+    "# Adjust layout and display\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -1014,6 +1012,7 @@
    "source": [
     "# Make predictions on the padded test data\n",
     "test_predictions = model.predict(X_test_padded)\n",
+    "test_predictions =(test_predictions.squeeze() > 0.5).astype(int)\n",
     "\n",
     "# Create submission DataFrame\n",
     "submission_df = pd.DataFrame({\n",
