--- a/main.ipynb
+++ b/main.ipynb
@@ -877,7 +877,7 @@
     "tuner = RandomSearch(\n",
     "    build_model,\n",
     "    objective='val_accuracy',\n",
-    "    max_trials=40,\n",
+    "    max_trials=30,\n",
     "    executions_per_trial=1,\n",
     "    directory='tuner_dir',\n",
     "    project_name='disaster_tweets'\n",
@@ -895,7 +895,8 @@
     "    X_train, y_train,\n",
     "    epochs=30,\n",
     "    validation_data=(X_val, y_val),\n",
-    "    callbacks=[early_stop],\n",
+    "    callbacks=callbacks,\n",
+    "    class_weights= class_weights,\n",
     "    batch_size=64\n",
     ")\n",
     "\n",
@@ -1001,6 +1002,34 @@
     "\n",
     "# Adjust layout and display\n",
     "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Single plot with dual y-axes\n",
+    "fig, ax1 = plt.subplots(figsize=(10, 6))\n",
+    "\n",
+    "color = 'tab:red'\n",
+    "ax1.set_xlabel('Epochs')\n",
+    "ax1.set_ylabel('Loss', color=color)\n",
+    "ax1.plot(epochs, loss_values, color=color, linestyle='--', label='Train Loss')\n",
+    "ax1.plot(epochs, val_loss_values, color=color, label='Val Loss')\n",
+    "ax1.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "ax2 = ax1.twinx()\n",
+    "color = 'tab:blue'\n",
+    "ax2.set_ylabel('Accuracy', color=color)\n",
+    "ax2.plot(epochs, accuracy, color=color, linestyle='--', label='Train Acc')\n",
+    "ax2.plot(epochs, val_accuracy, color=color, label='Val Acc')\n",
+    "ax2.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "plt.title('Training Dynamics')\n",
+    "fig.tight_layout()\n",
     "plt.show()"
    ]
   },
